# SmartDG

./: .DefaultCommitScript.sh  .gitignore  CMakeLists.txt  README.md
doc/: Generate_Documentation.sh  SmartDG.doxyfile  SmartDG_Dictionary.txt  SmartDG_Synopsis.doxyfile
src/: Dependency.cpp  Dependency.h  DependencyDataPackage.cpp  DependencyDataPackage.h  DependencyDescriptor.cpp  DependencyDescriptor.h  DependencyGraph.cpp  DependencyGraph.h  DependencyMonitor.cpp  DependencyMonitor.h  DependencyNode.cpp  DependencyNode.h  DependencyObject.cpp  DependencyObject.h  DependencyObjectInstance.cpp  DependencyObjectInstance.h  DependencyObjectInstances.cpp  DependencyObjectInstances.h  DependencyPort.cpp  DependencyPort.h  Environment.cpp  Environment.h  GUIConnection.cpp  GUIConnection.h  GUILine.cpp  GUILine.h  GUIPoint.cpp  GUIPoint.h  GUIText.cpp  GUIText.h  Main.cpp  SmartDG.h  SmartDGGenerator.cpp  SmartDGGenerator.h  TestEnvironmentSmartDG.h  TestTransferFunctionsDG.h  TransferFunctionHelper.cpp  TransferFunctionHelper.h  TransferFunctionsIdealConnector.h  TransferFunctionsNullNode.h  (+2 more)
tutorials/: .gitignore  BUILD_TUTORIALS.sh  CLEAN_TUTORIALS.sh  FETCH_EXAMPLES.sh  FETCH_TUTORIALS.sh  README.md
tutorials/01_Installing_Dependencies/: README.md  SmartDG_Install_Dependencies.sh
tutorials/02_Installing_SmartDG_Library/: README.md
tutorials/05_Transfer_Functions/: README.md
tutorials/10_Installing_SmartDG_DSLs_On_Eclipse/: Install_Eclipse_SmartMDSD-DG.sh  Installing_SmartDG_DSLs_On_Eclipse_A4.webm
(+1 files in other folders)
